testdata/golden/hir_borrow/invalid/move_forbidden_when_borrowed.hir
error SEM3020 testdata/golden/hir_borrow/invalid/move_forbidden_when_borrowed.sg:4:21 cannot move 'x' while it is shared-borrowed

== HIR ==
module 

fn t() -> nothing (id=1, sym=1224) {
  let x: string = "\"hi\""
  let r: &string [&] = (& x): &string
  let y: string = x
  return
}

borrow edges:
  L2449(r) (&) borrows L2448(x) at 0:56-58 scope=S3
events:
  borrow_start L2449(r) -> L2448(x) (&) at 0:56-58 scope=S3 note="B1"
  move L2448(x) at 0:80-81 scope=S3 note="issue=frozen borrow=B1"
  borrow_end L2449(r) -> L2448(x) scope=S3 note="scope_end B1"
move plan:
  L2448(x): MoveForbidden (move blocked by frozen (B1))
  L2449(r): MoveCopy (copy type)
  L2450(y): MoveNeedsDrop (non-copy (drop))

